Get rid of home.njk.

--- a/content/404.md
+++ b/content/404.md
@@ -1,8 +1,9 @@
 ---
-layout: layouts/home.njk
+layout: layouts/BaseLayout.11ty.tsx
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
+
 # Content not found.
 
 Go <a href="/">home</a>.
