--- a/content/404.md
+++ b/content/404.md
@@ -1,5 +1,5 @@
 ---
-layout: layouts/BaseLayout.11ty.tsx
+layout: layouts/MainLayout.11ty.tsx
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
